SFD-5841 Configure dependabot and upgrade from java 16 to 17 (#335)
SFD-5841 Configure dependabot and upgrade from java 16 to 17