@@ -1,6 +1,7 @@
 package uk.nhs.digital.uec.api.service.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
@@ -20,11 +21,9 @@ import uk.nhs.digital.uec.api.service.LocationServiceInterface;
 @Slf4j
 public class LocationService implements LocationServiceInterface {
 
-  @Autowired
-  private ApiUtilsServiceInterface apiUtilsService;
+  @Autowired private ApiUtilsServiceInterface apiUtilsService;
 
-  @Autowired
-  private ExternalApiHandshakeInterface apiHandshakeService;
+  @Autowired private ExternalApiHandshakeInterface apiHandshakeService;
 
   /**
    * {@inheritDoc}
@@ -34,38 +33,24 @@ public class LocationService implements LocationServiceInterface {
    */
   @Override
   public PostcodeLocation getLocationForPostcode(
-    final String postcode,
-    MultiValueMap<String, String> headers
-  )
-    throws NotFoundException, InvalidParameterException {
+      final String postcode, MultiValueMap<String, String> headers)
+      throws NotFoundException, InvalidParameterException {
     log.info("Sending postcode downstream - postcode: {}", postcode);
 
     try {
       if (StringUtils.isBlank(postcode)) {
         return null;
       }
-      List<String> sanitisedPostcodes = apiUtilsService.removeBlankSpacesIn(
-        Stream.of(postcode).toList()
-      );
+      List<String> sanitisedPostcodes =
+          apiUtilsService.removeBlankSpacesIn(Stream.of(postcode).collect(Collectors.toList()));
 
-      log.info(
-        "Sending postcode downstream after sanitised - postcode: {}",
-        sanitisedPostcodes
-      );
+      log.info("Sending postcode downstream after sanitised - postcode: {}", sanitisedPostcodes);
 
-      List<PostcodeLocation> postcodeMappings = apiHandshakeService.getPostcodeMappings(
-        sanitisedPostcodes,
-        headers
-      );
-      return postcodeMappings
-        .stream()
-        .findFirst()
-        .orElse(new PostcodeLocation());
+      List<PostcodeLocation> postcodeMappings =
+          apiHandshakeService.getPostcodeMappings(sanitisedPostcodes, headers);
+      return postcodeMappings.stream().findFirst().orElse(new PostcodeLocation());
     } catch (Exception e) {
-      log.error(
-        "An error occurred when accessing the postcode service, {}",
-        e.getMessage()
-      );
+      log.error("An error occurred when accessing the postcode service, {}", e.getMessage());
     }
     log.warn("Returning empty postcode location for {} value", postcode);
     return new PostcodeLocation();
@@ -73,31 +58,20 @@ public class LocationService implements LocationServiceInterface {
 
   /** {@inheritDoc} */
   @Override
-  public Double distanceBetween(
-    PostcodeLocation source,
-    PostcodeLocation destination
-  ) {
+  public Double distanceBetween(PostcodeLocation source, PostcodeLocation destination) {
     Double distance = null;
 
-    if (
-      source == null ||
-      destination == null ||
-      source.getEasting() == null ||
-      source.getNorthing() == null ||
-      destination.getEasting() == null ||
-      destination.getNorthing() == null
-    ) {
+    if (source == null
+        || destination == null
+        || source.getEasting() == null
+        || source.getNorthing() == null
+        || destination.getEasting() == null
+        || destination.getNorthing() == null) {
       return distance;
     }
 
-    Double eastingDiff = Math.pow(
-      (source.getEasting() - destination.getEasting()),
-      2
-    );
-    Double northingDiff = Math.pow(
-      (source.getNorthing() - destination.getNorthing()),
-      2
-    );
+    Double eastingDiff = Math.pow((source.getEasting() - destination.getEasting()), 2);
+    Double northingDiff = Math.pow((source.getNorthing() - destination.getNorthing()), 2);
 
     Double distanceInMetres = Math.sqrt(eastingDiff + northingDiff);
 
@@ -108,15 +82,11 @@ public class LocationService implements LocationServiceInterface {
 
   @Override
   public List<PostcodeLocation> getLocationsForPostcodes(
-    List<String> postCodes,
-    MultiValueMap<String, String> headers
-  )
-    throws InvalidParameterException {
+      List<String> postCodes, MultiValueMap<String, String> headers)
+      throws InvalidParameterException {
     postCodes.forEach(pc -> log.info("Getting location for {}", pc));
     return apiHandshakeService.getPostcodeMappings(
-      apiUtilsService.removeBlankSpacesIn(postCodes),
-      headers
-    );
+        apiUtilsService.removeBlankSpacesIn(postCodes), headers);
   }
 
   @Override
@@ -124,19 +94,15 @@ public class LocationService implements LocationServiceInterface {
     if (source == null || destination == null) {
       return null;
     }
-    if (
-      (source.getLat() == destination.getLat()) &&
-      (source.getLon() == destination.getLon())
-    ) {
+    if ((source.getLat() == destination.getLat()) && (source.getLon() == destination.getLon())) {
       return 0.0;
     } else {
       double theta = source.getLon() - destination.getLon();
       double dist =
-        Math.sin(Math.toRadians(source.getLat())) *
-        Math.sin(Math.toRadians(destination.getLat())) +
-        Math.cos(Math.toRadians(source.getLat())) *
-        Math.cos(Math.toRadians(destination.getLat())) *
-        Math.cos(Math.toRadians(theta));
+          Math.sin(Math.toRadians(source.getLat())) * Math.sin(Math.toRadians(destination.getLat()))
+              + Math.cos(Math.toRadians(source.getLat()))
+                  * Math.cos(Math.toRadians(destination.getLat()))
+                  * Math.cos(Math.toRadians(theta));
       dist = Math.acos(dist);
       dist = Math.toDegrees(dist);
       dist = dist * 60 * 1.1515;
