@@ -1,5 +1,19 @@
 package uk.nhs.digital.uec.api.service;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.only;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -27,46 +41,25 @@ import uk.nhs.digital.uec.api.service.impl.FuzzyServiceSearchService;
 import uk.nhs.digital.uec.api.service.impl.ValidationService;
 import uk.nhs.digital.uec.api.util.MockDosServicesUtil;
 
-import java.util.ArrayList;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.only;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 @ExtendWith(SpringExtension.class)
 @ExtendWith(OutputCaptureExtension.class)
 public class FuzzyServiceSearchServiceTest {
 
   private int maxNumServicesToReturn = 10;
 
-  @InjectMocks
-  private FuzzyServiceSearchService classUnderTest;
+  @InjectMocks private FuzzyServiceSearchService classUnderTest;
 
-  @Mock
-  private ServiceRepository serviceRepository;
+  @Mock private ServiceRepository serviceRepository;
 
-  @Mock
-  private ApiRequestParams apiRequestParams;
+  @Mock private ApiRequestParams apiRequestParams;
 
-  @Mock
-  private ApiUtilsServiceInterface apiUtilsService;
+  @Mock private ApiUtilsServiceInterface apiUtilsService;
 
-  @Mock
-  private LocationServiceInterface locationService;
+  @Mock private LocationServiceInterface locationService;
 
-  @Mock
-  private ExternalApiHandshakeService apiHandshakeService;
+  @Mock private ExternalApiHandshakeService apiHandshakeService;
 
-  @Mock
-  private ValidationService mockValidationService;
+  @Mock private ValidationService mockValidationService;
 
   private MultiValueMap<String, String> headers = null;
 
@@ -89,7 +82,6 @@ public class FuzzyServiceSearchServiceTest {
   @Test
   public void retrieveServicesByGeoLocationSearchSuccess(CapturedOutput log)
       throws NotFoundException, InvalidParameterException {
-
     String searchLatitude = "0.0";
     String searchLongitude = "0.0";
     Double distanceRange = 0.0;
@@ -101,17 +93,17 @@ public class FuzzyServiceSearchServiceTest {
 
     // when(apiUtilsService.sanitiseSearchTerms(searchCriteria)).thenReturn(searchCriteria);
     when(serviceRepository.findAllServicesByGeoLocation(
-        Double.parseDouble(searchLatitude), Double.parseDouble(searchLongitude), distanceRange))
+            Double.parseDouble(searchLatitude), Double.parseDouble(searchLongitude), distanceRange))
         .thenReturn(dosServices);
     when(mockValidationService.isPostcodeValid(anyString())).thenReturn(true);
 
     // Act
-    List<DosService> services = classUnderTest.retrieveServicesByGeoLocation(
-        searchLatitude, searchLongitude, distanceRange, searchTerms, "");
+    List<DosService> services =
+        classUnderTest.retrieveServicesByGeoLocation(
+            searchLatitude, searchLongitude, distanceRange, searchTerms, "");
 
     // Assert
     assertEquals(2, services.size());
-
   }
 
   @Test
@@ -128,13 +120,14 @@ public class FuzzyServiceSearchServiceTest {
     dosServices.add(MockDosServicesUtil.mockDosServices.get(2));
 
     when(serviceRepository.findAllServicesByGeoLocation(
-        Double.parseDouble(searchLatitude), Double.parseDouble(searchLongitude), distanceRange))
+            Double.parseDouble(searchLatitude), Double.parseDouble(searchLongitude), distanceRange))
         .thenReturn(dosServices);
     when(mockValidationService.isPostcodeValid(anyString())).thenReturn(false);
 
     // Act
-    List<DosService> services = classUnderTest.retrieveServicesByGeoLocation(
-        searchLatitude, searchLongitude, distanceRange, searchTerms, "");
+    List<DosService> services =
+        classUnderTest.retrieveServicesByGeoLocation(
+            searchLatitude, searchLongitude, distanceRange, searchTerms, "");
 
     // Assert
     verify(serviceRepository, only())
@@ -165,14 +158,15 @@ public class FuzzyServiceSearchServiceTest {
     GeoLocationResponseResult geoLocationResponseResult = mock(GeoLocationResponseResult.class);
     when(geoLocationResponseResult.getGeometry()).thenReturn(geometry);
     geoLocationResponseResults[0] = geoLocationResponseResult;
-    when(geoLocationResponse.getGeoLocationResponseResults()).thenReturn(geoLocationResponseResults);
+    when(geoLocationResponse.getGeoLocationResponseResults())
+        .thenReturn(geoLocationResponseResults);
     when(locationService.distanceBetween(geoPoint, geoPoint)).thenReturn(99.00);
     when(apiHandshakeService.getGeoCoordinates(anyString())).thenReturn(geoLocationResponse);
     when(mockValidationService.isPostcodeValid(anyString())).thenReturn(true);
 
     // Act
-    List<DosService> services = classUnderTest.retrieveServicesByGeoLocation(
-        null, null, 24.5, null, searchPostCode);
+    List<DosService> services =
+        classUnderTest.retrieveServicesByGeoLocation(null, null, 24.5, null, searchPostCode);
 
     // Assert
     assertEquals(0, services.size()); // because no valid postcode in dos services
@@ -197,26 +191,30 @@ public class FuzzyServiceSearchServiceTest {
 
     GeoLocationResponse geoLocationResponse = mock(GeoLocationResponse.class);
     GeoLocationResponseResult[] geoLocationResponseResults = new GeoLocationResponseResult[0];
-    when(geoLocationResponse.getGeoLocationResponseResults()).thenReturn(geoLocationResponseResults);
+    when(geoLocationResponse.getGeoLocationResponseResults())
+        .thenReturn(geoLocationResponseResults);
     when(locationService.distanceBetween(geoPoint, geoPoint)).thenReturn(99.00);
     when(apiHandshakeService.getGeoCoordinates(anyString())).thenReturn(geoLocationResponse);
     when(mockValidationService.isPostcodeValid(anyString())).thenReturn(true);
     // Act
-    InvalidParameterException exception = assertThrows(InvalidParameterException.class, () -> {
-      classUnderTest.retrieveServicesByGeoLocation(null, null, null,
-          null, searchPostCode);
-    });
+    InvalidParameterException exception =
+        assertThrows(
+            InvalidParameterException.class,
+            () -> {
+              classUnderTest.retrieveServicesByGeoLocation(null, null, null, null, searchPostCode);
+            });
     assertEquals(exception.getMessage(), ErrorMessageEnum.INVALID_POSTCODE.getMessage());
-
   }
 
   @Test
   @DisplayName("Should throw InvalidParameterException  when all values null")
   public void shouldThrowInvalidParameterExceptionWhenValuesNullOrEmpty() {
-    InvalidParameterException exception = assertThrows(InvalidParameterException.class, () -> {
-      classUnderTest.retrieveServicesByGeoLocation(null, null, null,
-          null, null);
-    });
+    InvalidParameterException exception =
+        assertThrows(
+            InvalidParameterException.class,
+            () -> {
+              classUnderTest.retrieveServicesByGeoLocation(null, null, null, null, null);
+            });
     assertEquals(exception.getMessage(), ErrorMessageEnum.INVALID_LAT_LON_VALUES.getMessage());
   }
 
@@ -227,7 +225,7 @@ public class FuzzyServiceSearchServiceTest {
     String searchLatitude = "23.45";
     String searchLongitude = "-0.3456";
     Double distanceRange = 0.0;
-    List<String> searchTerms = List.of("term1");
+    List<String> searchTerms = Arrays.asList("term1");
     String postcode = "XX1 1XX";
 
     List<DosService> dosServices = new ArrayList<>();
@@ -247,7 +245,8 @@ public class FuzzyServiceSearchServiceTest {
     GeoLocationResponseResult geoLocationResponseResult = mock(GeoLocationResponseResult.class);
     when(geoLocationResponseResult.getGeometry()).thenReturn(geometry);
     geoLocationResponseResults[0] = geoLocationResponseResult;
-    when(geoLocationResponse.getGeoLocationResponseResults()).thenReturn(geoLocationResponseResults);
+    when(geoLocationResponse.getGeoLocationResponseResults())
+        .thenReturn(geoLocationResponseResults);
     when(locationService.distanceBetween(geoPoint, geoPoint)).thenReturn(99.00);
     when(apiHandshakeService.getGeoCoordinates(anyString())).thenReturn(geoLocationResponse);
 
@@ -255,11 +254,15 @@ public class FuzzyServiceSearchServiceTest {
     when(apiUtilsService.sanitiseSearchTerms(searchTerms)).thenReturn(searchTerms);
     when(apiUtilsService.removeBlankSpaces(postcode)).thenReturn("XX11XX");
     when(serviceRepository.findAllServicesByGeoLocationWithSearchTerms(
-        Double.parseDouble(searchLatitude), Double.parseDouble(searchLongitude), distanceRange, searchTerms))
+            Double.parseDouble(searchLatitude),
+            Double.parseDouble(searchLongitude),
+            distanceRange,
+            searchTerms))
         .thenReturn(dosServices);
     // Act
-    List<DosService> services = classUnderTest.retrieveServicesByGeoLocation(
-        searchLatitude, searchLongitude, distanceRange, searchTerms, postcode);
+    List<DosService> services =
+        classUnderTest.retrieveServicesByGeoLocation(
+            searchLatitude, searchLongitude, distanceRange, searchTerms, postcode);
     assertTrue(log.getOut().contains("Searching using location & search terms:"));
     verify(mockValidationService, times(1)).validateSearchCriteria(searchTerms);
     // Assert
@@ -274,7 +277,7 @@ public class FuzzyServiceSearchServiceTest {
     final String searchLongitude = "0";
     final Double distanceRange = 0D;
     final String postcode = "EX7 8PR";
-    final List<String> searchTerms = List.of("search", "terms");
+    final List<String> searchTerms = Arrays.asList("search", "terms");
     List<DosService> dosServices = new ArrayList<>();
     dosServices.add(MockDosServicesUtil.mockDosServices.get(1));
     dosServices.add(MockDosServicesUtil.mockDosServices.get(21));
@@ -293,26 +296,27 @@ public class FuzzyServiceSearchServiceTest {
     GeoLocationResponseResult geoLocationResponseResult = mock(GeoLocationResponseResult.class);
     when(geoLocationResponseResult.getGeometry()).thenReturn(geometry);
     geoLocationResponseResults[0] = geoLocationResponseResult;
-    when(geoLocationResponse.getGeoLocationResponseResults()).thenReturn(geoLocationResponseResults);
+    when(geoLocationResponse.getGeoLocationResponseResults())
+        .thenReturn(geoLocationResponseResults);
     when(locationService.distanceBetween(geoPoint, geoPoint)).thenReturn(99.00);
     when(apiHandshakeService.getGeoCoordinates(anyString())).thenReturn(geoLocationResponse);
 
     doNothing().when(mockValidationService).validateSearchCriteria(searchTerms);
     when(serviceRepository.findAllServicesByGeoLocationWithSearchTerms(
-        Double.parseDouble(searchLatitude),
-        Double.parseDouble(searchLongitude),
-        distanceRange,
-        searchTerms)).thenReturn(dosServices);
+            Double.parseDouble(searchLatitude),
+            Double.parseDouble(searchLongitude),
+            distanceRange,
+            searchTerms))
+        .thenReturn(dosServices);
 
     when(mockValidationService.isPostcodeValid(anyString())).thenReturn(true);
     // when(apiHandshakeService.getAccessTokenHeader()).thenReturn(mockHeaders);
     // when(locationService.getLocationForPostcode(postcode,mockHeaders)).thenReturn(searchLocation);
     // When
-    List<DosService> fuzzyResults = classUnderTest.retrieveServicesByGeoLocation(searchLatitude, searchLongitude,
-        distanceRange, searchTerms, postcode);
+    List<DosService> fuzzyResults =
+        classUnderTest.retrieveServicesByGeoLocation(
+            searchLatitude, searchLongitude, distanceRange, searchTerms, postcode);
     // Then
     assertEquals(3, fuzzyResults.size());
-
   }
-
 }
